--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=4000
-OPENAI_API_KEY=your-openai-api-key
+OPENAI_API_KEY=
 HF_TOKEN=your-hf-token
-GOOGLE_API_KEY=your-google-api-key
+GOOGLE_API_KEY=
